--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,10 @@
 @import 'tailwindcss';
 
+@theme {
+  --color-primary: #da47ef;
+  --color-primary-light: #fce4ff;
+}
+
 @layer base {
   button {
     cursor: pointer;
