feat: Add fadePulse animation to Tailwind config and apply it to PriceImageWithButtonSection
- Introduced a new 'fade-pulse' animation in Tailwind configuration for enhanced visual effects.
- Defined keyframes for the fadePulse animation to create a smooth fading effect.
- Applied the fadePulse animation to the SVG in PriceImageWithButtonSection for improved user experience.

--- a/app/globals.css
+++ b/app/globals.css
@@ -78,7 +78,6 @@
     bottom: env(safe-area-inset-bottom);
     padding-bottom: env(safe-area-inset-bottom);
   }
-
 }
 
 @keyframes float {
@@ -177,5 +176,26 @@
   to {
     opacity: 0;
     transform: scale(0.95);
+  }
+}
+
+@keyframes fadePulse {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0.5;
+  }
+  20% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
   }
 }
