--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,14 @@
 @theme {
   --color-primary: #da47ef;
   --color-primary-light: #fce4ff;
+  --color-primary-200: #feefff;
+  --color-primary-300: #fcdeff;
+  --color-primary-400: #fbceff;
+  --color-primary-500: #f8adff;
+  --color-primary-600: #f58cff;
+  --color-primary-700: #f47cff;
+  --color-primary-800: #f26bff;
+  --color-primary-900: #f15bff;
 }
 
 /* 베이스 토큰 */
